<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="111dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="123dp"
                android:layout_height="57dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:buttonTint="@color/purple_500"
                android:drawableRight="@drawable/heart"
                android:text="@string/behaviour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="97dp"
                android:layout_height="57dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:buttonTint="@color/purple_500"
                android:drawableRight="@drawable/check"
                android:text="@string/duties"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="167dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/purple_500"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="2dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:translationX="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/purple_500"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="3dp"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                android:text="@string/repeat"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:translationX="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="454dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="442dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/assignedToHorizontalMargin"
                android:layout_marginTop="@dimen/assignedToVerticalMargin"
                android:text="@string/assigned_to"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:textSize="@dimen/assignedTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border"
                android:src="@drawable/kid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border"
                android:src="@drawable/kid"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border"
                android:src="@drawable/kid"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border"
                android:src="@drawable/kid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="128dp"
                android:text="@string/add_button"
                android:textSize="@dimen/addChildButtonTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>