<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ChildAddEditFragment"
    android:background="@drawable/gradient_background"
    >

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/child_s_name"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:translationY="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/child_s_birthday"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:translationY="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/choose_avatar"
        android:translationY="30sp"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextBirthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthday"
        app:layout_constraintVertical_bias="0.110000014" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_layout_avatar_view"
        android:layout_width="412dp"
        android:layout_height="576dp"
        android:layout_marginTop="32dp"
        app:columnCount="4"
        app:rowCount="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/kid" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/kid" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/kid" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>