<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.ui.home.HomeViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="#ebddf0">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_nrewards"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="409dp"
        android:layout_height="689dp"
        android:layout_marginTop="8dp"
        android:background="#ebddf0"
        app:columnCount="2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="1dp">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="10dp"
            app:layout_column="0"
            app:layout_row="0"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/constraintWidth"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="@dimen/avatarWidth"
                    android:layout_height="@dimen/avatarHeight"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border"
                    android:src="@drawable/kid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="70dp"
                    android:drawableStart="@drawable/heart"
                    android:text="+4"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="30dp"
                    android:drawableStart="@drawable/check"
                    android:text="+13"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/name1"
                    android:textSize="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="10dp"
            android:translationY="10dp"
            app:layout_column="0"
            app:layout_row="1"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/constraintWidth"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="@dimen/avatarWidth"
                    android:layout_height="@dimen/avatarHeight"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border"
                    android:src="@drawable/kid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="70dp"
                    android:drawableStart="@drawable/heart"
                    android:text="+11"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/textVie11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="30dp"
                    android:drawableStart="@drawable/check"
                    android:text="+7"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/name3"
                    android:textSize="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="15dp"
            app:layout_column="1"
            app:layout_row="0"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/constraintWidth"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/avatarWidth"
                    android:layout_height="@dimen/avatarHeight"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border"
                    android:src="@drawable/kid"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="70dp"
                    android:drawableStart="@drawable/heart"
                    android:text="+6"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="30dp"
                    android:drawableStart="@drawable/check"
                    android:text="+10"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/name2"
                    android:textSize="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addChildButton"
            android:layout_width="@dimen/addChildWidth"
            android:layout_height="@dimen/addChildHeight"
            android:text="@string/add_child"
            android:textSize="@dimen/addChildButtonTextSize"
            android:translationX="30dp"
            android:translationY="65dp"
            app:layout_column="1"
            app:layout_row="2"
            android:onClick="@{() -> viewModel.addNewChild()}" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>